Refactoring code by using promises & async/await

--- a/httpRequests.html
+++ b/httpRequests.html
@@ -11,8 +11,8 @@
     <h1>~ Http Requests ~</h1>
 
 
-    <script src="httpRequests.js"></script>
-    <script src="app.js"></script>
+    <script src="httpRequests_v3.js"></script>
+    <script src="app_v2.js"></script>
 </body>
 
 </html>
